--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,64 @@ dist/
 .env.development.local
 .env.test.local
 .env.production.local
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.swp
+*.swo
+*.iml
+.flowconfig
+*~
+*.pyc
+.grunt
+_SpecRunner.html
+__benchmarks__
+build/
+remote-repo/
+coverage/
+.module-cache
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/coverage
+/build
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+build
+
+# Dependency directories
+node_modules/
+jspm_packages/
+/.pnp
+.pnp.js
+
+# Distribution directories
+dist/
+
+# Typescript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
