--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
+    "expo-av": "~14.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-video": "^6.1.2",
-    "expo-av": "~14.0.5"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-video": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
