--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
@@ -18,10 +20,12 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.1.2"
   },
   "devDependencies": {
