--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@expo/metro-runtime": "~3.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.7.5",
@@ -22,23 +24,23 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "bulma": "^1.0.1",
-    "expo": "~51.0.8",
+    "expo": "~51.0.9",
     "expo-av": "~14.0.5",
-    "expo-status-bar": "~1.12.1",
     "expo-image-picker": "~15.0.5",
+    "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.1.2",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
