--- a/client/package.json
+++ b/client/package.json
@@ -19,27 +19,25 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.7.6",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "bulma": "^1.0.1",
-    "expo": "~51.0.9",
-    "expo-av": "~14.0.5",
-    "expo-image-picker": "~15.0.5",
-    "expo-status-bar": "~1.12.1",
-    "jwt-decode": "^4.0.0",
     "axios": "^1.7.2",
+    "bulma": "^1.0.1",
     "expo": "~51.0.8",
     "expo-av": "~14.0.5",
     "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
+    "graphql": "^15.8.0",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-network-proxy": "^1.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
