--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "bulma": "^1.0.1",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.8",
     "expo-av": "~14.0.5",
     "expo-image-picker": "~15.0.5",
@@ -34,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
