--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "@apollo/server": "^4.7.1",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
