--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,7 @@
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2",
-    "react-native-dotenv": "^3.4.11"
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
