--- a/client/package.json
+++ b/client/package.json
@@ -30,13 +30,16 @@
     "expo": "~51.0.8",
     "expo-av": "~14.0.5",
     "expo-image-picker": "~15.0.5",
+    "expo-localization": "^15.0.3",
     "expo-status-bar": "~1.12.1",
     "graphql": "^15.8.0",
+    "i18next": "^23.11.5",
     "jwt-decode": "^4.0.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.1.2",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
