--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
+    "i18next": "^23.11.5",
+    "i18next-fs-backend": "^2.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2"
   },
