--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.2",
     "react-native": "0.74.1",
+    "react-native-calendars": "^1.1305.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
