--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-network-proxy": "^1.0.1",
     "react-native-photo-upload": "^1.3.0",
