--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "i18n-js": "^4.4.3"
   }
 }
