--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon server.js",
+    "start": "node seeds/seed.js && node server.js",
+    "watch": "node seeds/seed.js && nodemon server.js",
     "seed": "node seeds/seed.js"
   },
   "keywords": [],
