stashing initial progress graphing changes that are very broken still

--- a/client/package.json
+++ b/client/package.json
@@ -32,8 +32,8 @@
     "expo-image-picker": "~15.0.5",
     "expo-localization": "^15.0.3",
     "expo-status-bar": "~1.12.1",
-    "i18n-js": "^4.4.3",
     "graphql": "^16.6.0",
+    "i18n-js": "^4.4.3",
     "i18next": "^23.11.5",
     "jwt-decode": "^4.0.0",
     "os": "^0.1.2",
@@ -43,6 +43,7 @@
     "react-i18next": "^14.1.2",
     "react-native": "0.74.1",
     "react-native-calendars": "^1.1305.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
