--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@expo/metro-runtime": "~3.2.1",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -23,9 +19,6 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "axios": "^1.7.2",
-    "bulma": "^1.0.1",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "expo": "~51.0.8",
     "expo-av": "~14.0.5",
